--- a/production.config.toml
+++ b/production.config.toml
@@ -4,7 +4,7 @@ languageCode = "en-us"
 theme = "v2"
 
 defaultContentLanguage = "en"
-defaultContentLanguageInSubdir = true
+defaultContentLanguageInSubdir = false
 
 PygmentsCodeFences = false
 # PygmentsStyle = "monokai"
@@ -106,7 +106,7 @@ disableHugoGeneratorInject = false
     theme = "#24292e"
 
   [params.logo]
-    logoText     = "🌱 cd /home/"
+    logoText     = "💾 cd /home/"
     logoHomeLink = "/"
     # Set true to remove the logo cursor entirely.
     # logoCursorDisabled = false
