--- a/production.config.toml
+++ b/production.config.toml
@@ -13,7 +13,7 @@ paginate  = 20
 rssLimit  = 10  # Maximum number of items in the RSS feed.
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
 
-# googleAnalytics = "G-NMF0524WN1"
+googleAnalytics = "G-NMF0524WN1"
 # disqusShortname = "themaymeow"
 
 archetypeDir = "archetypes"
